# wilhelm_motor_driver

./: CMakeLists.txt  README.md  clean_build.sh  main.c
include/: command_handler.h  motor_control.h
include/util/: pin_definitions.h  ring_buffer.h  uart_comm.h
src/: command_handler.c  motor_control.c  pin_definitions.c  ring_buffer.c  uart_comm.c
